# ai-ontology.com

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-COMMERCIAL.md  README.md
.github/workflows/: ci.yml
auth-server/: .env.example  .gitignore  README.md  package-lock.json  package.json
auth-server/src/: config.js  index.js  jwt.js  middleware.js  store.js
auth-server/src/routes/: auth.js  oauth.js
auth-server/tests/: auth.test.js
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: end_to_end.rs
crates/graph/: Cargo.toml
crates/graph/src/: error.rs  graph.rs  id.rs  lib.rs  model.rs  schema.rs  traversal.rs
crates/index/: Cargo.toml
crates/index/src/: embed.rs  hybrid.rs  lexical.rs  lib.rs  vector.rs
crates/io/: Cargo.toml
crates/io/src/: charset.rs  csv.rs  docx.rs  extract.rs  ingest.rs  jsonl.rs  lang.rs  lib.rs  proposal.rs  record.rs  text.rs  triples.rs  xlsx.rs
crates/io/tests/: csv.rs  export_roundtrip.rs
crates/rag/: Cargo.toml
crates/rag/src/: extract.rs  lib.rs  model.rs  pipeline.rs  prompt.rs
crates/rag/tests/: anthropic_wire.rs
crates/server/: Cargo.toml
crates/server/src/: ingest_review.rs  lib.rs  openapi.rs
crates/server/tests/: http.rs  ingest_review.rs
crates/storage/: Cargo.toml
crates/storage/src/: file.rs  lib.rs  log.rs  memory.rs  periodic.rs  snapshot.rs  store.rs
crates/storage/tests/: compact.rs  wal_delete.rs
docs/: PERFORMANCE.md
examples/: sample-ontology.json  sample.triples
examples/finance/: README.md  invoices.xlsx  line_items.xlsx  ontology.json  relations.jsonl  seed.jsonl
examples/finance/contracts/: C-2025-001.txt  C-2025-002.txt  C-2025-003.txt
scripts/: analyze.ps1
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.js  App.tsx  AskPanel.tsx  BrowsePanel.tsx  UploadPanel.tsx  api.js  api.ts  main.js  main.tsx  styles.css  vite-env.d.ts
web/src/components/: Card.js  Card.tsx  ConfirmDialog.jsx  Dropzone.js  Dropzone.tsx  FeedbackModal.js  FeedbackModal.tsx  GraphCanvas.js  GraphCanvas.tsx  IngestReview.js  IngestReview.tsx  OntologyGraph.js  OntologyGraph.tsx  Sparkline.js  Sparkline.tsx  StatCard.js  StatCard.tsx  StreamingAnswer.js  StreamingAnswer.tsx  Toast.jsx
web/src/layout/: Layout.js  Layout.tsx  Sidebar.js  Sidebar.tsx  TopBar.js  TopBar.tsx
web/src/lib/: extractText.js  extractText.ts  ingestApi.js  ingestApi.ts  logBuffer.js  logBuffer.ts  mergeProposals.js  mergeProposals.ts  msBE.js  proposalTypes.js  proposalTypes.ts  providerConfig.js  providerConfig.ts
web/src/pages/: Actions.js  Actions.tsx  Concepts.js  Concepts.tsx  Dashboard.js  Dashboard.tsx  Files.js  Files.tsx  GraphView.js  GraphView.tsx  IngestWizard.js  IngestWizard.tsx  Login.jsx  OAuthCallback.jsx  OntologyBuilder.js  OntologyBuilder.tsx  Queries.js  Queries.tsx  Rules.js  Rules.tsx  Settings.js  Settings.tsx  Signup.jsx
web/src/routes/: ProtectedRoute.jsx
web/src/types/: providerConfig.js  providerConfig.ts
