[workspace]
resolver = "2"
members = [
    "crates/graph",
    "crates/storage",
    "crates/index",
    "crates/io",
    "crates/rag",
    "crates/server",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Winven AI Sarl, Route de Crassier 7, 1262 Eysins, VD, CH"]
repository = "https://github.com/masspe/ai-ontology.com"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "io-std", "time"] }
async-trait = "0.1"
dashmap = "5"
parking_lot = "0.12"
ahash = { version = "0.8", features = ["serde"] }
smallvec = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5"
hyper = "1"
http = "1"
calamine = "0.30"

ontology-graph = { path = "crates/graph" }
ontology-storage = { path = "crates/storage" }
ontology-index = { path = "crates/index" }
ontology-io = { path = "crates/io" }
ontology-rag = { path = "crates/rag" }
ontology-server = { path = "crates/server" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
