[package]
name = "ontology-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ontology"
path = "src/main.rs"

[dependencies]
ontology-graph = { workspace = true }
ontology-storage = { workspace = true }
ontology-index = { workspace = true }
ontology-io = { workspace = true }
ontology-rag = { workspace = true }
ontology-server = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
