[package]
name = "ontology-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ontology-graph = { workspace = true }
ontology-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
calamine = { workspace = true }
chardetng = "0.1"
encoding_rs = "0.8"
unicode-normalization = "0.1"
whatlang = "0.16"
zip = { version = "4.6", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
