[package]
name = "ontology-rag"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ontology-graph = { workspace = true }
ontology-index = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
