[package]
name = "ontology-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ontology-graph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
ahash = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
